--- a/css/style.css
+++ b/css/style.css
@@ -549,6 +549,18 @@ div#popular #more{
 	text-decoration: none;
 }
 
+/* login loading cover */
+.loginLoadingCover {
+  display: none;
+  position: absolute;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: #222222 url('../ajax-loader small.gif') 50% 50% no-repeat;
+}
+
 /* dataset preview*/
 .dataCollapseButton {
 	position: relative;
