--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -19,6 +19,28 @@
   background:#f0f0f0;
 }
 
+#grouppopup{
+  padding:10px;
+  width:300px;
+  margin-top:3px;
+  border-radius: 5px 5px 5px 5px ;
+  background:#f0f0f0;
+}
+
+.from, .to, .grouprepeat, .groupcanok{
+  padding:4px;
+}
+
+.grp-to{
+  margin-left: 40px;
+}
+.grp-from{
+  margin-left: 20px;
+}
+.grp-rep{
+  margin-left: 8px;
+}
+
 
 #triangle{
   width:400px;
