--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -95,8 +95,10 @@
 }
 
 #logintext{
-	font-family:'Open Sans',sans-serif;
-	font-size:120%;
+  margin-top: -5px;
+  margin-bottom: 10px;
+  font-size: 120%;
+  display: block;
 }
 
 #input2:hover{
