--- a/css/style.css
+++ b/css/style.css
@@ -89,8 +89,15 @@ div#preview.showContent {
   margin-top: 1px;
 }
 
-div#editor .fa {
-	color: #0858B2;
+.sns-sharing {
+	width: 34px;
+	height: 34px;
+	padding: 5px;
+	margin-right: 5px;
+}
+.sns-sharing .fa{
+	color: white;
+	font-size: 24px;
 }
 div#editor>input.form-control {
 	width: 70%;
@@ -101,16 +108,6 @@ div#editor>p {
 	width: 40%;
 	display: inline;
 	line-height: 34px;
-}
-div#editor>p a {
-	width: 34px;
-	height: 34px;
-	padding: 5px;
-
-}
-div#editor>p .fa{
-	color: white;
-	font-size: 24px;
 }
 div#editor .fa-delete{
 	color: white;
